styles/loansGiven/_myLendingList.scss
.my-lending-nft-list {
  display: inline-block;
  width: 100%;
  margin: 45px 0 20px;

  h1 {
    margin: $mr-xl 0;

    @media (max-width: $bp-phone) {
      margin: 0 auto $mr-md;
      text-align: center;
    }
  }

  &__inner {
    display: flex;
    width: 100%;
    flex-wrap: wrap;
    justify-content: space-between;

    @media (max-width: $bp-tablet) {
      flex-direction: column;
      align-items: center;
    }
  }
}

.my-lending-nft-list-loading {
  width: 100%;
  display: flex;
  justify-content: center;
}

.my-lending-nft-list.empty h1 {
  text-align: center;
}

.loan-given {
  width: 49%;
  margin-bottom: 10px;
  @include theme-aware("background", "myOffers-subOffer-bg");
  backdrop-filter: blur(4px);
  box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
  margin-top: 8px;
  padding: 20px;
  display: grid;
  grid-template-columns: 1fr;
  gap: $mr-md 0;
  border-radius: $brd-rds-2tn;

  &.green {
    @include theme-aware("background", "timeLoan-offer-green");
  }

  &.yellow {
    @include theme-aware("background", "timeLoan-offer-yellow");
  }

  &.red {
    @include theme-aware("background", "timeLoan-offer-red");
  }

  @media (max-width: $bp-tablet) {
    width: 95%;
  }

  @media (max-width: $bp-phone) {
    flex-direction: column;
    padding: $mr-2rem $mr-md;
    gap: $mr-md;
    border-radius: $brd-rds-md;

    .loan__row:nth-child(2) {
      flex-direction: column;
      gap: $mr-2rem;
    }
  }

  .loan__row:first-child {
    margin-bottom: -$mr-sm;
  }

  .loan__row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    gap: $mr-md;

    &--item {
      display: flex;
      flex-direction: column;
      align-items: center;

      &.header {
        flex-direction: row;
        flex: 1 1 calc(65% - $mr-md/2);
      }

      &.loan-time {
        align-items: flex-end;

        span {
          font-size: $tp-sm;
        }

        .time-row {
          @include theme-aware("background", "myOffers-subOffer-info-bg");
          padding: 6px 3px;
          border-radius: 6px;

          span {
            font-size: $tp-2md;
            line-height: 18px;
            font-weight: $wg-hv;
          }

          & > span {
            padding: 0 7px;
            &:not(:last-child) {
              @include theme-aware("border-right", "loan-time-divide");
            }
          }
        }
      }

      :first-child {
        margin-bottom: 5px;
      }

      &.green p,
      &.green span {
        @include theme-aware("color", "timeLoan-green");
      }

      &.green.loan-time span {
        @include theme-aware("color", "myLoan-header-color");
      }

      &.green .time-row span {
        @include theme-aware("color", "timeLoan-green-white");
      }

      &.yellow p,
      &.yellow span {
        @include theme-aware("color", "timeLoan-yellow");
      }

      &.yellow.loan-time span {
        @include theme-aware("color", "myLoan-header-color");
      }

      &.yellow .time-row span {
        @include theme-aware("color", "timeLoan-yellow-white");
      }

      &.red p,
      &.red span {
        @include theme-aware("color", "timeLoan-red");
      }

      &.red.loan-time span {
        @include theme-aware("color", "myLoan-header-color");
      }

      &.red .time-row span {
        @include theme-aware("color", "timeLoan-red-white");
      }

      &.yellow.status p {
        @include theme-aware("background", "timeLoan-yellow-btn");
      }

      &.red.status p {
        @include theme-aware("background", "timeLoan-red-btn");
      }

      h4 {
        font-weight: 400;
      }
    }

    &.details {
      @include theme-aware("background", "myOffers-subOffer-info-bg");
      @include theme-aware("color", "myOffers-nftName-color");
      box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.25);
      border-radius: $brd-rds-2tn;
      justify-content: space-around;
      align-items: center;
      padding: $mr-sm 8px;

      @media (max-width: $bp-phone) {
        margin: 0 auto;
        width: 90%;
      }
    }

    button {
      border-radius: $brd-rds-2tn;
      width: 48%;
      display: flex;
      justify-content: center;
    }

    .claim-nft--button,
    .loan-not-repaid-button {
      margin: 0 auto;
      border: 0;
      font-weight: $wg-hv;

      @media (max-width: $bp-phone) {
        width: 90%;
      }
    }

    .loan-not-repaid-button {
      @include theme-aware("background", "myOffers-subOffer-info-bg");
      @include theme-aware("color", "timeLoanDisabled-color");
    }

    .item__image {
      flex: 0 1 30%;
    }

    .item__title {
      flex: 1 1 70%;
      margin-left: 16px;

      .name {
        font-weight: 700;
      }

      .collection {
        font-size: 12px;
        span {
          font-weight: 700;
        }
      }

      .name,
      .collection {
        @include theme-aware("color", "myLoan-header-color");
      }
    }

    img {
      border-radius: $brd-rds-sm;
    }
  }

  &.disabled {
    .loan__row--item div,
    .loan__row--item p,
    .loan__row button {
      @include theme-aware("color", "timeLoanDiabled-color");
      @include theme-aware("background", "disabled-bg");
    }

    .loan__row--item h4 {
      @include theme-aware("color", "timeLoanDiabled-color");
    }

    .loan__row button {
      pointer-events: none;
      cursor: not-allowed;
      border: 0;
    }
  }
}

.loan-containers {
  &__mint,
  &__id,
  &__status {
    width: 160px;
    height: 30px;
    text-align: center;
    line-height: 30px;
    font-weight: 700;
    overflow: hidden;
    text-overflow: ellipsis;
    border-radius: $brd-rds-sm;
    justify-content: center;

    &.green {
      background: rgba(0, 215, 86, 0.25);
    }
    &.yellow {
      @include theme-aware("background", "timeLoan-yellow-btn");
    }
    &.red {
      @include theme-aware("background", "timeLoan-red-btn");
    }

    @media (max-width: $bp-phone) {
      width: 75%;
    }
  }

  &__mint,
  &__id {
    color: white;
    &.show-on-hover:hover {
      padding: 0;
    }
    &.show-on-hover {
      & .show-on-hover__elements__wrap {
        margin-bottom: 0;
      }
    }
  }

  &__mint {
    @include theme-aware("background", "myLoan-mint-bg");
  }

  &__id {
    @include theme-aware("background", "myLoan-id-bg");
  }
}

.loan-time {
  line-height: 16px;
  flex: 1 1 calc(35% - $mr-md/2);

  span {
    width: 100%;
    text-align: right;
  }

  &--left {
    font-size: 32px;
    font-weight: 700;
    text-align: right;
    width: 100%;
    line-height: 1;

    &__sub {
      font-size: 20px;
    }
  }
}

